# p68kasm

./: Cargo.toml  simple.h68  simple.lis
assembler/example_asm/: example.s  include.s  simple.s
assembler/src/: arena.rs  asm2.pest  error.rs  file.rs  utils.rs
assembler/src/codegen/: srec.rs  symbols.rs
assembler/tests/: os.h68
ast/src/: addressing.rs  lib.rs
example_asm/: .gitignore  example.s  include.s  include_extra.s  simple.h68  simple.lis  simple.s
sim68000/: Cargo.toml
src/: arena.rs  args.rs  asm.pest  asm2.pest  codegen.rs  error.rs  file.rs  listing.rs  main.rs  parser.rs  utils.rs
src/codegen/: srec.rs  symbols.rs
tests/: os.lis  os.s
