[package]
name = "p68kasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
once_cell = "1.17.1"
pest = "2.5.7"
pest_derive = "2.5.7"
typed-arena = "2.0.2"
